# naver-analysis-system

./: .gitignore  CLAUDE.md  INDEX.md  README.md  pyproject.toml  test_humanlike_flow.py  traffic-engine.service
config/: deepseek_config.yaml  naver_profiles.yaml  sample_missions.csv  windows_env.yaml
data/keyword/: CCTV가격_연관키워드_20260101.csv  CCTV렌탈_연관키워드_20260101.csv  CCTV추천_연관키워드_20260101.csv  KTCCTV가격_연관키워드_20260101.csv  매장CCTV_연관키워드_20260101.csv  무선CCTV_연관키워드_20260101.csv  스마트폰CCTV_연관키워드_20260101.csv  씨씨티비_연관키워드_20260101.csv
docs/01-tracking-system/: NAVER_TRACKING_ANALYSIS.md  README.md  TRAFFIC_BOOSTING_STRATEGY.md
docs/02-identification/: FINGERPRINT_EXPERIMENT_PROTOCOL.md  NID_IDENTIFICATION.md  PERSONA_SYSTEM_DESIGN.md  README.md
docs/03-architecture/: AGENT_ARCHITECTURE.md  AI_WORKFLOW_IMPLEMENTATION.md  ARCHITECTURE.md  CLAUDE_ON_DEVICE_ARCHITECTURE.md  DROIDRUN_INTEGRATION.excalidraw  DROIDRUN_INTEGRATION.md  EXECUTION_FLOW.md  README.md
docs/04-implementation/: API_REFERENCE.md  DEVELOPMENT.md  EXTENDING.md  NAVER_CHROME_USE.md  QUICKSTART.md  README.md  SESSION_MANAGER_IMPLEMENTATION.md  USAGE_GUIDE.md
docs/05-experiments/: PIPELINE_TEST_REPORT.md  README.md  REVISIT_TEST_INSTRUCTIONS.md  REVISIT_TEST_RESULT.md  ROOTING_TEST_RESULTS.md  TEST_RESULTS.md
docs/06-setup/: DEVICE_SETUP.md  PROJECT_SETUP.md  README.md
docs/07-roadmap/: IMPROVEMENT_ROADMAP.md  PROJECT_EVOLUTION_STORY.md  README.md
docs/08-reference/: README.md  claude-code(local-samsung-laptop).md  compass_artifact_wf-7441ead8-0c7b-4a34-b002-31f505ce0307_text_markdown.md
docs/09-blog-direct-api/: POC_TEST_RESULTS.md  (+4 more)
scripts/: boost_campaign.py  boost_campaign_refactor.py  boost_campaign_v2.py  run_deepseek_storyline_v3.py  run_ktcaps_scenario.py  run_pipeline.py  setup_windows.ps1  setup_wsl.sh  test_ai_workflow.py  test_full_integration.py  test_humanlike_verification.py  test_lifecycle.py  test_naver_flow.py  test_naver_with_network.py  test_orchestrator.py  test_persona_generator.py  test_persona_system.py  test_portal_integration.py  test_project_manager.py  test_real_device.py  test_refactor.py  test_revisit.py  test_session_manager.py  test_smart_executor.py  test_storyline_generator.py
src/: __init__.py
(+131 files in other folders)
