[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naver-ai-evolution"
version = "0.1.0"
description = "네이버 AI 자동화 진화 시스템"
readme = "README.md"
license = {text = "Private"}
requires-python = ">=3.10"
authors = [
    {name = "AI Developer", email = "dev@example.com"}
]
keywords = ["automation", "ai", "android", "naver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "comtypes>=1.2.0",
]
wsl = [
    "docker>=6.1.0",
    "paramiko>=3.3.0",
    "uvloop>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
all = ["naver-ai-evolution[windows,wsl,dev]"]

[project.scripts]
naver = "src.shared.cli:main"
naver-ai = "src.shared.cli:main"
naver-windows = "src.windows.windows_services:main"
naver-wsl = "src.wsl.linux_daemons:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
